# bevy_keybind

./: .gitignore  Cargo.toml  readme.md
assets/: bindings.yaml
examples/: basic.rs
src/: config.rs  input.rs  lib.rs
