[package]
name = "bevy_keybind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = [ "serialize" ] }
serde = "1.0.137"
serde_yaml = "0.8.24"

[[example]]
name = "basic"
path = "examples/basic.rs"