[package]
name = "bevy_keybind"
description = "Common event interface for bevy_input, so that we can better separate logic from configuration."
version = "1.0.0"
edition = "2021"
authors = [ "https://github.com/wanderrful" ]

[dependencies]
bevy_app = "0.7.0"
bevy_ecs = "0.7.0"
bevy_input = { version = "0.7.0", features = [ "serialize" ] }
serde = "1.0.137"
serde_yaml = "0.8.24"

# We only need the full Bevy project when we run examples and tests.
[dev-dependencies]
bevy = { version = "0.7.0", features = [ "serialize" ] }

[[example]]
name = "basic"
path = "examples/basic.rs"
